package dev.daanh.zombie.weather.enums;

public enum PrecipitationType {
    NONE,
    RAIN,
    SNOW,
    HAIL,
    SLEET,
    UNKNOWN
}
