package dev.daanh.zombie.weather.enums;

public enum WeatherType {
    CLEAR,
    PARTLY_CLOUDY,
    CLOUDY,
    FOG,
    DRIZZLE,
    RAIN,
    HEAVY_RAIN,
    THUNDERSTORM,
    SNOW,
    HEAVY_SNOW,
    BLIZZARD,
    HAIL,
    HEATWAVE,
    COLD_SNAP,
    DUST_STORM,
    UNKNOWN
}
