package dev.daanh.zombie.weather.enums;

public enum WindStrength {
    CALM,
    LIGHT,
    MODERATE,
    STRONG,
    GALE,
    STORM,
    UNKNOWN
}
